--- a/styles/sass/abstracts/_varibles.sass
+++ b/styles/sass/abstracts/_varibles.sass
@@ -20,6 +20,7 @@ $bgc-hilight-soft: #c0bbca
 $bgc-hilight-subtle: #565b61
 $bgc-important: black
 $bgc-subtle: #313438
+$bgc-disabled: #d3d3d3
 $bgc-discounted: #4c6b22
 $bgc-subsidiary: #8b0023
 $bgc-subsidiary-hilight: #ff0040
