--- a/styles/sass/abstracts/_varibles.sass
+++ b/styles/sass/abstracts/_varibles.sass
@@ -33,6 +33,7 @@ $bgc-transparent: rgba(0, 0, 0, 0)
 $fc-admin: #10161b
 $fc-admin-delete: #c70000 
 $fc-admin-edit: #04F404
+$fc-admin-warning: #ffc107
 $fc-admin-white: #eef0f1
 $fc-admin-white-soft: #565757
 $bgc-admin: #eef0f1
@@ -46,6 +47,8 @@ $bgc-admin-line: rgba(222, 226, 230, 1)
 $bgc-admin-line-gray: rgba(0,0,0,.125)
 $bgc-admin-line-dark: rgba(0,0,0,.3)
 $bgc-admin-current: #007bff
+//* border
+$brd-admin-gray: 2px solid $bgc-admin-line-gray
 //* box-shadows
 $bs-card-md: rgba(0, 0, 0, 0.35) 0px 5px 15px
 $bs-card-lg: rgb(0, 0, 0) 0px 20px 30px -10px
