--- a/styles/sass/abstracts/mixins/_detail-mixins.sass
+++ b/styles/sass/abstracts/mixins/_detail-mixins.sass
@@ -12,7 +12,7 @@
     
 @mixin recommended
     >section.recommended
-        @include flex($direction: column, $gap: 1.5em)
+        @include flex($direction: column, $align: stretch, $gap: 1.5em)
         >div
             @include flex($direction: column, $align: stretch, $gap: 1em)
             >div:nth-child(1)
@@ -40,19 +40,11 @@
                     &:hover
                         box-shadow: $bs-card-light
                     >div:first-child
+                        width: 100%
                         >div
                             height: auto
                             overflow: hidden
                             margin-bottom: .25em
-                            width: 40vw
-                            @include bs.from(m)
-                                width: 25vw
-                            // >img
-                            //     object-fit: fill
-                            //     height: auto
-                            //     max-width: 100%
-                            //     display: block
-                            //     box-shadow: $bs-card-img
                         >h4
                             color: $fc-tag
                             display: block
